--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <!-- main  -->
     <main>
         <!-- banner part  -->
-        <section class="container">
+        <<section class="container">
             <div class="container1">
                 <div class="header">
                     <div class="heading">
                         <h1>The Greatest Show on the Earth</h1>
                         <p>Now you can enjoy your favorite games on online, whenever you want and wherever you are. No
-                            barrier, just need a click. </p>
+                            barrier, just need a click.</p>
                     </div>
                     <div class="watch-live">
                         <a href="#">Watch Live > </a>
@@ -40,163 +40,163 @@
                     <img src="assets/Banner Image.png" alt="">
                 </div>
             </div>
-        </section>
-        <!-- Blog part -->
-        <section>
-            <article class="article1">
-                <div class="side-menu">
-                    <div class="menubar">
-                        <div class="side-nav">
-                            <a href="upcoming-match.html">Upoming Match</a>
-                        </div>
-                        <div class="side-nav">
-                            <a href="#">All Group</a>
-                        </div>
-                        <div class="side-nav">
-                            <a href="#blogs">Blogs</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="blogs">
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
+            </section>
+            <!-- Blog part -->
+            <section>
+                <article class="article1">
+                    <div class="side-menu">
+                        <div class="menubar">
+                            <div class="side-nav">
+                                <a href="upcoming-match.html">Upoming Match</a>
+                            </div>
+                            <div class="side-nav">
+                                <a href="#">All Group</a>
+                            </div>
+                            <div class="side-nav">
+                                <a href="#blogs">Blogs</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
+                    <div class="blogs">
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
                         </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
                         </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
                         </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
+                        </div>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
+                        </div>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
+                        </div>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
+                        </div>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
+                        </div>
+                        <div class="blog-size">
+                            <div>
+                                <img src="assets/Blog Image.png" alt="">
+                            </div>
+                            <div class="transfer">
+                                <a href="">Transfer</a>
+                            </div>
+                            <div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-clock">10h</i>
+                                <i class="fa-regular fa-comment-dots">23</i>
+                            </div>
                         </div>
                     </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                    <div class="blog-size">
-                        <div>
-                            <img src="assets/Blog Image.png" alt="">
-                        </div>
-                        <div class="transfer">
-                            <a href="">Transfer</a>
-                        </div>
-                        <div>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, sapiente.</p>
-                        </div>
-                        <div>
-                            <i class="fa-regular fa-clock">10h</i>
-                            <i class="fa-regular fa-comment-dots">23</i>
-                        </div>
-                    </div>
-                </div>
 
-            </article>
-        </section>
+                </article>
+            </section>
     </main>
     <!-- footer part -->
     <footer>
